--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <a class="nav-link active" routerLink="/products">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Customers</a>
+        <a class="nav-link" routerLink="/customers">Customers</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -19,9 +19,6 @@
     </ul>
   </div>
 </nav>
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">...</nav>
-
 <router-outlet>
 
 
