--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,20 @@
-<p>orders works!</p>
+<div class="container">
+  <table class="table" *ngIf="orders">
+    <thead>
+    <tr>
+      <th>ID</th> <th>BillingDate</th> <th>CustomerId</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let o of orders._embedded.bills">
+      <td>{{o.id}}</td>
+      <td>{{o.billingDate|date:'dd/MM/yyyy'}}</td>
+      <td>{{o.customerID}}</td>
+      <td>
+        <button class="btn btn-success" (click)="getBillDetails(o)">Bill details</button>
+      </td>
+
+    </tr>
+    </tbody>
+  </table>
+</div>
